# spark-dynamodb-data-source

./: .gitignore  AGENTS.md  README.md  examples.ipynb  prompt.md  pyproject.toml  pytest.ini  run-aws-tests.sh
.github/: dependabot.yml
.github/workflows/: onpush.yml
docs/: aws-iam-setup.md
src/dynamodb_data_source/: __init__.py  credentials.py  data_source.py  partitioning.py  reader.py  schema.py  type_conversion.py  writer.py
tests/: conftest.py  docker-compose.yml  test_aws_integration.py  test_integration.py  test_options.py  test_partitioning.py  test_reader.py  test_schema.py  test_stream_writer.py  test_type_conversion.py  test_writer.py
