[project]
name = "dynamodb-data-source"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Ott",email = "alexott@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-spark = "^0.8.0"
boto3 = "^1.42.54"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"
pyspark = {extras = ["sql,connect"], version = "4.1.1"}
grpcio = ">=1.76.0"
grpcio-status = ">=1.76.0"
googleapis-common-protos = ">=1.71.0"
mypy = "^1.19.0"
pyarrow = "^22.0.0"

[tool.poetry]
packages = [{include = "dynamodb_data_source", from = "src"}]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
